<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/sv_wrapperHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <!--    GENDER TITLE AND SPINNER -->

    <TextView
        android:textSize="22sp"
        android:id="@+id/title_spinner_gender"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tl_gender_spinner" />

    <Spinner
        android:textSize="22sp"
        android:padding="10dp"
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <!--    COURSE TITLE AND SPINNER -->

    <TextView
        android:textSize="22sp"
        android:id="@+id/tv_course_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tl_course_spinner" />

    <Spinner
        android:textSize="22sp"
        android:padding="10dp"
        android:id="@+id/course_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <!--    BIRTH DATE    -->

    <TextView
        android:textSize="22sp"
        android:id="@+id/title_BirthDate"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_date_of_birth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/register_Month"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/month_input"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:digits="0123456789"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/register_Day"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/day_input"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:digits="0123456789"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/register_Year"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_input"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:digits="0123456789"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--    REGISTRATION STATUS     -->

    <TextView
        android:textSize="22sp"
        android:id="@+id/tl_completedSemester"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tl_regStatus" />

    <CheckBox
        android:id="@+id/checkBox_regStatus"
        style="@style/TextInputEditText"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/checkBox_regStatus" />

    <!--    TERMS AND CONDITION     -->

    <TextView
        android:textSize="22sp"
        android:id="@+id/tl_termsAndCondition"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tl_TermsCondition" />

    <CheckBox
        android:id="@+id/checkBox_terms"
        style="@style/TextInputEditText"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/checkBox_TermsCondition"
        />

    <!--    REGISTER BUTTON    -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginTop="15dp"
        style="@style/ButtonGreen" />

</LinearLayout>
</ScrollView>